[package]
name = "lane_detection"
version = "0.1.0"
edition = "2021"
authors = ["Lane Detection Team"]
description = "A lane detection system using computer vision techniques"

[dependencies]
opencv = "0.84.0"
clap = { version = "4.3.0", features = ["derive"] }
anyhow = "1.0.72"
log = "0.4.19"
env_logger = "0.10.0"

[[bin]]
name = "lane_detection"
path = "src/main.rs"